--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 nav {
     background-color: steelblue;
     padding: 10px;
@@ -9,6 +14,7 @@ nav a {
 }
 h1 {
     color: steelblue;
+    margin: 1rem;
 }
 img {
     width: 150px;
@@ -29,8 +35,9 @@ aside {
     border: 1px solid rgba(0, 0, 0, 0.2);
     padding: 1rem;
     background-color: #eee;
-    color: #333;
+    color: #674d1fd2;
     text-align: center;
+    position: relative;
 }
 aside img {
     width: 200px;
@@ -40,9 +47,40 @@ main img{
     width: 150px;
     height: auto;
 }
+
+p {
+    margin: 1rem;
+}
+
 footer {
     margin-top: 1em;
     border-top: 1px solid #000;
     text-align: center;
+}
+
+/* Class Selectors */
+
+.box {
+    margin: 1rem;
+    border: 15px yellow;
+    padding: 1rem;
+    background-color: #eee;
+    color: #3f4145;
+}
+
+main img{
+    float: right;
+}
+
+aside h2{
+    position: absolute;
+    top: 20px;
+    right: 110px;
+    color: bisque;
+
+}
+
+.indent{
+    padding-left: 2em;
 }
 
