--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -64,7 +64,7 @@ h2 {
 
 .hero p {
     font-size: 1rem;
-    color: solid black;
+    color: black;
     right: 30%;
     font-weight: bold;
     text-align: justify;
