--- a/styles/styles.css
+++ b/styles/styles.css
@@ -76,9 +76,9 @@ main img{
 
 aside h2{
     position: absolute;
-    top: 20px;
+    top: 40px;
     right: 110px;
-    color: orange;
+    color: white;
 
 }
 
