--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -33,6 +33,8 @@ h2 {
 }
 
 .sociallinks {
+    display: flex;
+    justify-content: space-around;
     text-decoration: none;
 }
 
@@ -52,7 +54,7 @@ h2 {
 .hero article {
     position: absolute;
     top: 30%;
-    background-color: rgba(160, 160, 225,.5);
+    background-color: rgba(240, 240, 249, .5 );
     margin: 30px;
 }
 
@@ -70,10 +72,13 @@ h2 {
     text-align: justify;
     margin-left: 2%;
 }
-footer {
-    text-align: center;
-}
-/*h1 {
+
+/*
+rgba(160, 160, 225,.5)
+
+ghostwhite
+
+h1 {
     text-align: center;
     background-image: url(heroimage.jpg);
 } */
@@ -88,22 +93,171 @@ footer {
     height: 140px;
     margin: 20px;
 }
+
 h2{
     color: var(--accent1-color);
 }
 
 
+header {
+    display: grid;
+    grid-template-columns: repeat(1, 150px 1fr) ;
+    
+} 
+
+header img {
+    width: 200px; 
+    background-color: white;
+    height: 150px;
+    width: 150px;
+    
+}
+
+ header nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 150px;
+    justify-content: space-around;
+    background-color: white;
+    font-weight: 800;
+    
+    
+}
+header a:hover {
+    color: orange;
+    border-bottom: 3px dashed green;
+      
+}
+
+.history {
+    display: grid;
+    grid-template-columns: 402px 309px 404px;
+    grid-template-rows: 50px 300px;
+    text-align: justify;
+    margin-top: 40px;
+    background-color:ghostwhite;
+}
+
+.history img {
+    grid-column: 2 / 3;
+    margin-top: 22px;
+    justify-self: center;
+    width: 270px;
+    height: 210px;
+
+}
+
+.history h2 { 
+    grid-column: 2 / 3;
+    align-self: start;
+    justify-self: center;
+    gap: 20px;
+
+}
+.history p {
+    grid-row: 2 / 3;
+    margin: 10px;
+    justify-items: start;
+} 
+
+#secondp { 
+    grid-column: 3 / 4;
+}
+
+.adventure {
+    display: grid;
+    grid-template-columns: 234.8px 227.8px 227.8px 227.8px 227.8px;
+    grid-template-rows: 50px 215px;
+    gap: 4px;
+    background-color:;
+}
+    /* rgb(111, 193, 111) 
+    rgb(232, 186, 101)*/
 
 
- /*#ty {
-    float: right;
+
+ 
+.adventure img {
+    align-items: center; 
+    justify-items: center;
+    height: 133px;
+    margin: 10px;
+    border: 3px dashed rgb(111, 193, 111);
+    
 }
-#tre {
-    position: relative;
+
+.adventure h2 {
+    justify-self: center;
+    align-self: start;
+    grid-column: 3 / 4;
 }
-#yui {
-    position: absolute;
-}*/
+
+/*.block1{
+    display: grid;
+} */
+
+.first {
+    grid-row: 2 / 3;
+    grid-column: 1 / 2;
+    width: 200px;
+    align-self:center;
+    justify-self: end;
+
+}
+
+#seconddd {
+    grid-row: 2 / 3;
+    grid-column: 2 / 3;
+    width: 200px;
+    align-self:center;
+    justify-self: end;
+}
+
+#third {
+    grid-row: 2 / 3;
+    grid-column: 3 / 4;
+    width: 200px;
+    align-self:center;
+    justify-self: end;
+}
+
+#fourth {
+    grid-row: 2 / 3;
+    grid-column: 4 / 5;
+    width: 200px;
+    align-self:center;
+    justify-self: end;
+} 
+
+#fifth {
+    grid-row: 2 / 3;
+    grid-column: 5 / 6;
+    width: 200px;
+    align-self:center;
+    justify-self: end;
+}
+
+figcaption {
+    text-align: center;
+}
+
+footer {
+    display: grid;
+    grid-template-columns: 950px 1fr;
+    grid-template-rows: 50px;
+    text-align: center;
+}
+
+footer p {
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 188px;
+    margin-inline-end: 0px;
+}
+}
+
 
 
 
