--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -204,6 +204,8 @@ header a:hover {
 
 }
 
+
+
 #seconddd {
     grid-row: 2 / 3;
     grid-column: 2 / 3;
@@ -255,6 +257,115 @@ footer p {
     margin-inline-end: 0px;
 }
 
+
+
+
+#title2 {
+    text-align: center;
+    font-size: 40px;
+}
+
+.casi {
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+    flex-wrap: nowrap;
+    gap: 1px;
+
+}
+
+#house {
+    width: 200px;
+
+}
+
+#emaill {
+    width: 200px;
+}
+
+#phoone {
+    width: 200px;
+}
+
+#locaa {
+    width: 200px;
+}
+
+.h22 {
+    text-align: center;
+    font-size: 40px;
+}
+
+#team {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: nowrap;
+    text-align: center;
+    gap: 1px;
+
+}
+
+.angie {
+    margin-top: 60px;
+
+}
+
+.joshua {
+    margin-top: 76px;
+}
+
+#team img {
+    border: 3px dashed rgb(111, 193, 111);
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+#team img:hover {opacity: 0.7;}
+
+.h23 {
+    text-align: center;
+    font-size: 40px;
+}
+
+.wet {
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+    padding: 1rem;
+    width: 100;
+}
+
+.wat {
+    border: 3px solid green;
+    padding: 20px;
+    text-align: left;
+}
+
+ 
+
+textarea {
+    width: 240px;
+    padding: 0;
+    margin-right: 10px;
+    box-sizing: border-box;
+}
+
+#username, #email, #message {
+    width: 240px;
+    
+} 
+
+
+.bye {
+    margin-left: 100px;
+    background-color: #00abef;
+    padding: 8px;
+    width: 70px;
+}
+
+.bye:hover {
+    background-color: rgb(247, 173, 76);
+}
 
 
 
