--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -332,7 +332,7 @@ footer p {
     justify-content: center;
     margin: 0 auto;
     padding: 1rem;
-    width: 100;
+    width: 100px;
 }
 
 .div {
