--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -367,5 +367,227 @@ textarea {
     background-color: rgb(247, 173, 76);
 }
 
+/* trip page */
+
+.tripsmain {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 70px 1fr 1fr;
+    gap: 10px;
+}
+
+#triptitle{
+    margin-left: 7em;
+    
+}
+
+.item-1 {
+    grid-row: 2 / 3 ;
+    grid-column: 1 / 2 ;
+    text-align: center;
+}
+
+.item-2 {
+    text-align: center;
+    grid-row: 2 / 3 ;
+    grid-column: 2 / 3 ;
+
+}
+
+.item-3 {
+    text-align: center;
+    grid-row: 3 / 4 ;
+    grid-column: 1 / 2 ;
+}
+
+.item-4 {
+    text-align: center;
+    grid-row: 3 / 4 ;
+    grid-column: 2 / 3 ;
+}
+
+.item-5 {
+    text-align: center;
+    grid-row: 1 / 4 ;
+    grid-column: 3 / 4 ;
+}
+
+
+.triptitle {
+    grid-row: 1 / 2 ;
+    grid-column: 1 / 3 ;
+    text-align: center;
+
+}
+
+.triptable{
+    margin-top: 40px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+   
+}
+
+table, td, th {
+    border: 1px solid green;
+}
+
+td, th {
+    padding: 10px;
+}
+
+table {
+    border-collapse: collapse;
+}
+
+.tripbutton {
+    border-radius: 5px;
+    background-color: #00A1E0 ; 
+    color: #FFFFFF;
+    padding: 13px;
+    margin-top: 40px;
+}
+
+.tripbutton:hover{
+    color: #FFFFFF; 
+    background-color: #288F4B;
+}
+
+.imagestrip {
+    border: 3px dashed rgb(111, 193, 111);
+}
+
+#title2, .h22, .h23, .availabletitle, .additionaltitle, h2, h1 {
+    color: #d67d00;
+}
+
+#h1trip {
+    color: #084C61;
+}
+
+/* Home Page */ 
+
+.fullwidth {
+    position: relative;
+}
+
+.fullwidth img {
+    aspect-ratio: 4 / 1.5;
+    object-fit: cover;
+    max-width: 100%;
+    height: auto;
+}
+
+.fulltext {
+    position: absolute;
+    padding: 15px;
+    top: 20px;
+}
+
+.fulltext h1 {
+    margin-left: 410px;
+    color: rgb(139, 74, 0);
+}
+
+.fulltext p {
+    bottom: 3px;
+    margin-left: 510px;
+}
+
+
+.homemain {
+    display: grid;
+    gap: 10px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+
+}
+
+.homemain img {
+    border: 3px dashed rgb(111, 193, 111);
+}
+
+
+.purpose {
+    grid-row: 1 / 4;
+    grid-column: 1 / 2;
+    text-align: center;
+}
+
+.offerings {
+    grid-row: 1 / 4;
+    grid-column: 4 / 5;
+    text-align: center;
+}
+
+.suform {
+    grid-row: 1 / 3;
+    grid-column: 2 / 4;
+
+}
+
+.homebutt {
+    grid-row: 3 / 4;
+    grid-column: 2 / 4;
+    text-align: center;
+    margin-top: 50px;
+    padding: 10px;
+    
+
+}
+
+.homereal:hover {
+    background-color: green;
+}
+
+
+
+
+.homereal{
+    background-color: rgb(255, 0, 0);
+    padding: 10px;
+    color: #FFFFFF;
+    border: 1px solid black;
+}
+
+.justify {
+    text-align: left;
+    margin-left: 35px;
+}
+
+.homeform {
+    border: 1px solid green;
+    margin-left: 130px;
+    padding: 20px;
+    width:250px;
+    justify-items: center;
+    
+   
+}
+
+.suform h3 {
+    text-align: center;
+}
+
+.homesignup {
+    margin-left: 90px;
+    color: black;
+    background-color:#F58F00 ;
+    padding: 5px;
+    border: 1px solid black;
+   
+    
+}
+
+.homesignup:hover {
+    background-color: #00A1E0;
+}
+
+
+
+
+
+
+
 
 
