--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -131,7 +131,7 @@ header a:hover {
 
 .history {
     display: grid;
-    grid-template-columns: 402px 309px 404px;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 50px 300px;
     text-align: justify;
     margin-top: 40px;
@@ -148,6 +148,7 @@ header a:hover {
 }
 
 .history h2 { 
+    grid-row: 1 / 2;
     grid-column: 2 / 3;
     align-self: start;
     justify-self: center;
@@ -158,6 +159,7 @@ header a:hover {
     grid-row: 2 / 3;
     margin: 10px;
     justify-items: start;
+    vertical-align: middle;
 } 
 
 #secondp { 
@@ -166,7 +168,7 @@ header a:hover {
 
 .adventure {
     display: grid;
-    grid-template-columns: 234.8px 227.8px 227.8px 227.8px 227.8px;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 50px 215px;
     gap: 4px;
 }
@@ -179,13 +181,16 @@ header a:hover {
 .adventure img {
     align-items: center; 
     justify-items: center;
-    height: 133px;
+    width: 100%;
+    height: auto; 
     margin: 10px;
     border: 3px dashed rgb(111, 193, 111);
     
 }
 
 .adventure h2 {
+    width: auto;
+    height: 100%;
     justify-self: center;
     align-self: start;
     grid-column: 3 / 4;
@@ -198,7 +203,7 @@ header a:hover {
 .first {
     grid-row: 2 / 3;
     grid-column: 1 / 2;
-    width: 200px;
+    width: auto;
     align-self:center;
     justify-self: end;
 
@@ -209,7 +214,7 @@ header a:hover {
 #seconddd {
     grid-row: 2 / 3;
     grid-column: 2 / 3;
-    width: 200px;
+    width: auto;
     align-self:center;
     justify-self: end;
 }
@@ -217,7 +222,7 @@ header a:hover {
 #third {
     grid-row: 2 / 3;
     grid-column: 3 / 4;
-    width: 200px;
+    width: auto;
     align-self:center;
     justify-self: end;
 }
@@ -225,7 +230,7 @@ header a:hover {
 #fourth {
     grid-row: 2 / 3;
     grid-column: 4 / 5;
-    width: 200px;
+    width: auto;
     align-self:center;
     justify-self: end;
 } 
@@ -233,7 +238,7 @@ header a:hover {
 #fifth {
     grid-row: 2 / 3;
     grid-column: 5 / 6;
-    width: 200px;
+    width: auto;
     align-self:center;
     justify-self: end;
 }
@@ -474,7 +479,7 @@ table {
 .fullwidth img {
     aspect-ratio: 4 / 1.5;
     object-fit: cover;
-    max-width: 100%;
+    width: 100%;
     height: auto;
 }
 
@@ -581,6 +586,10 @@ table {
 
 .homesignup:hover {
     background-color: #00A1E0;
+}
+
+footer{
+    margin: 30px;
 }
 
 
